# equity-analysis

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
web/: astro.config.mjs  package-lock.json  package.json  starwind.config.json  tailwind.config.mjs
web/src/components/starwind/button/: Button.astro
web/src/components/starwind/card/: Card.astro  CardTitle.astro  index.ts
web/src/components/starwind/dropzone/: Dropzone.astro  DropzoneFilesList.astro  DropzoneLoadingIndicator.astro  DropzoneUploadIndicator.astro  index.ts
web/src/components/starwind/table/: Table.astro  TableBody.astro  TableCaption.astro  TableCell.astro  TableFoot.astro  TableHead.astro  TableHeader.astro  TableRow.astro  index.ts
web/src/components/starwind/tabs/: TabsList.astro
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: starwind.css
