[project]
name = "excel-analysis"
version = "0.8.0"
description = ""
readme = "README.md"

authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "datareader>=0.0.9",
    "pandas-datareader>=0.10.0",
    "yfinance>=0.2.26",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.2",
    "pandas>=2.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=7.4.0",
    "pylint>=3.0.2",
    "pre-commit>=3.6.0",
]

[project.scripts]
start = "excel_analysis.stock_processing:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-exclude = ["web"]
fix = true
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "ERA",
    "I",
    "N",
    "PIE",
    "PGH",
    "RUF",
    "SIM",
    "T20",
    "TC",
    "TID",
    "UP",
]
extend-safe-fixes = ["TC"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
files = "excel_analysis"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

# [[tool.mypy.overrides]]
# module = ["requests.*"]
# ignore_missing_imports = true
