[project]
name = "equity-analysis"
version = "1.0.0"
description = "A monorepo containing the core library, CLI, and API client."
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/cli",
    "packages/api"
]

# ==========================================================
#           SHARED DEVELOPMENT TOOL CONFIGURATIONS
# ==========================================================

[tool.ruff]
fix = true
line-length = 88
target-version = "py311" # Adjusted to a stable Python version, you can use "py313" if you wish.

[tool.ruff.lint]
# Re-instating your strict rule selection.
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
extend-safe-fixes = ["TC"]

[tool.ruff.lint.flake8-tidy-imports]
# Enforces clean, absolute imports, which is excellent for a monorepo.
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
strict = true
namespace_packages = true
explicit_package_bases = true

mypy_path = "packages/core/src:packages/cli/src:packages/api/src"

enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

# todo: ignoring missing stubs for third-party libraries for now
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "packages/core/src",
  "packages/cli/src",
  "packages/api/src"
]
